--- a/app/src/main/res/values-ru/donottranslate-keymap.xml
+++ b/app/src/main/res/values-ru/donottranslate-keymap.xml
@@ -34,7 +34,7 @@
 
     <string name="key_ae02_main">2</string>
     <string name="key_ae02_shift">\"</string>
-    <string name="key_ae02_alt">2\"\'²⅔</string>
+    <string name="key_ae02_alt">2\"«»\'²⅔</string>
     
     <string name="key_ae03_main">3</string>
     <string name="key_ae03_shift">№</string>
