--- a/app/src/main/res/xml/kbd_full.xml
+++ b/app/src/main/res/xml/kbd_full.xml
@@ -58,15 +58,17 @@
             android:shiftLabel="@string/key_tlde_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_tlde_alt"
-            android:keyWidth="4.5714285%p"
+            android:keyWidth="7%p"
             android:keyEdgeFlags="left" />
         <Key
             android:keyLabel="@string/key_ae01_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae01_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae01_alt" />
         <Key
             android:keyLabel="@string/key_ae02_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae02_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae02_alt" />
@@ -77,46 +79,55 @@
             android:popupCharacters="@string/key_ae03_alt" />
         <Key
             android:keyLabel="@string/key_ae04_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae04_shift"
             android:popupKeyboard="@xml/kbd_popup_narrow_template"
             android:popupCharacters="@string/key_ae04_alt" />
         <Key
             android:keyLabel="@string/key_ae05_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae05_shift"
             android:popupKeyboard="@xml/kbd_popup_narrow_template"
             android:popupCharacters="@string/key_ae05_alt" />
         <Key
             android:keyLabel="@string/key_ae06_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae06_shift"
             android:popupKeyboard="@xml/kbd_popup_narrow_template"
             android:popupCharacters="@string/key_ae06_alt" />
         <Key
             android:keyLabel="@string/key_ae07_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae07_shift"
             android:popupKeyboard="@xml/kbd_popup_narrow_template"
             android:popupCharacters="@string/key_ae07_alt" />
         <Key
             android:keyLabel="@string/key_ae08_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae08_shift"
             android:popupKeyboard="@xml/kbd_popup_narrow_template"
             android:popupCharacters="@string/key_ae08_alt" />
         <Key
             android:keyLabel="@string/key_ae09_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae09_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae09_alt" />
         <Key
             android:keyLabel="@string/key_ae10_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae10_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae10_alt" />
         <Key
             android:keyLabel="@string/key_ae11_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae11_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae11_alt" />
         <Key
             android:keyLabel="@string/key_ae12_main"
+            android:keyWidth="7%p"
             android:shiftLabel="@string/key_ae12_shift"
             android:popupKeyboard="@xml/kbd_popup_template"
             android:popupCharacters="@string/key_ae12_alt" />
@@ -124,7 +135,7 @@
             android:codes="@integer/key_delete"
             android:keyIcon="@drawable/sym_keyboard_delete"
             android:iconPreview="@drawable/sym_keyboard_feedback_delete"
-            android:keyWidth="9.7142855%p"
+            android:keyWidth="9%p"
             android:isModifier="true"
             android:isRepeatable="true"
             android:keyEdgeFlags="right" />
