Increase left shift in russian layout (fix)

--- a/app/src/main/res/values-ru/donottranslate-keymap.xml
+++ b/app/src/main/res/values-ru/donottranslate-keymap.xml
@@ -175,9 +175,9 @@
     <string name="key_ac11_alt">\'&quot;</string>
 
 
-    <string name="key_lsgt_main">&lt;</string>
-    <string name="key_lsgt_shift">&gt;</string>
-    <string name="key_lsgt_alt">&lt;&gt;|\@</string>
+    <string name="key_lsgt_main"></string>
+    <string name="key_lsgt_shift"></string>
+    <string name="key_lsgt_alt"></string>
 
     <string name="key_ab01_main">я</string>
     <string name="key_ab01_shift">Я</string>
